--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,3 +15,4 @@ nav:
     - Closed Loop Control: closed-loop.md
     - PID Control: pid.md
     - Roadrunner: roadrunner.md
+    - Custom Auton: auton.md 
